Cambios en la estructura y algunas mejoras

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,1 +1,9 @@
 /* your styles go here */
+/*sticky-header para el thead de una tabla*/
+.sticky-header {
+    position: sticky;
+    top: 0;
+    background-color: #fff;
+    z-index: 10;
+}
+
